--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,20 @@ plugins {
 group 'org.arduino.serial'
 version '1.0-SNAPSHOT'
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.serial.ArduinoSerial'
+    }
+    archiveName = 'arwriter.jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 repositories {
     mavenCentral()
 }
@@ -12,9 +26,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    implementation group: 'com.fazecast', name: 'jSerialComm', version: '2.6.2'
+    compile group: 'com.fazecast', name: 'jSerialComm', version: '2.6.2'
     compile group: 'org.vesalainen.comm', name: 'javaxcomm', version: '1.0.1'
-    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'
 
 
 }
